Omnibox - HistoryQuick Provider - Don't Run Duplicate Searches

(when splitting on cursor)

If the cursor is next to a space, there's no need to insert a space
where the cursor is.

Not tested.  Please give this change a thorough review.

BUG=670003

Review-Url: https://codereview.chromium.org/2842513006
Cr-Commit-Position: refs/heads/master@{#470242}

Former-commit-id: 7d8bbddd8416f906955738a2f70cb402527d079c